# vibetorrent-v3

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  ui_config.toml  updater.sh  vibetorrent.db  vibetorrent.db-shm  vibetorrent.db-wal
.cargo/: config.toml
.gitea/workflows/: build-mips.yml  publish-runner.yml
.github/workflows/: build-mips.yml
backend/: .env  .env.example  Cargo.toml
backend/migrations/: 002_push_subscriptions.sql
backend/src/: db.rs  diff.rs  main.rs  models.rs  push.rs  rate_limit.rs  scgi.rs  sse.rs  xmlrpc.rs
backend/src/handlers/: auth.rs  mod.rs  notifications.rs  setup.rs
docker/runner/: Dockerfile  entrypoint.sh
docs/: IOS_PUSH_NOTIFICATIONS.md
frontend/: Cargo.toml  Trunk.toml  index.html  input.css  manifest.json  package-lock.json  package.json  postcss.config.cjs  sw.js  tailwind.config.js
frontend/.cargo/: config.toml
frontend/public/: tailwind.css
frontend/src/: app.rs  lib.rs  models.rs  store.rs
frontend/src/api/: mod.rs
frontend/src/components/: context_menu.rs  mod.rs  modal.rs  sidebar.rs  status_bar.rs  toast.rs  toolbar.rs  torrent_table.rs
frontend/src/components/auth/: login.rs  mod.rs  setup.rs
frontend/src/components/hooks/: mod.rs  use_can_scroll_vertical.rs  use_random.rs
frontend/src/components/layout/: footer.rs  mod.rs  protected.rs  sidebar.rs  statusbar.rs  toolbar.rs
frontend/src/components/settings/: limit_modal.rs  mod.rs
frontend/src/components/torrent/: add_torrent.rs  detail.rs  mod.rs  table.rs
frontend/src/components/ui/: accordion.rs  badge.rs  button.rs  button_action.rs  card.rs  checkbox.rs  context_menu.rs  data_table.rs  dialog.rs  drag_and_drop.rs  dropdown_menu.rs  empty.rs  input.rs  mod.rs  multi_select.rs  select.rs  sheet.rs  sidenav.rs  skeleton.rs  svg_icon.rs  switch.rs  table.rs  theme_toggle.rs  toast.rs
frontend/src/utils/: mod.rs  notification.rs  platform.rs
patches/coarsetime/: Cargo.toml
patches/coarsetime/src/: clock.rs  duration.rs  instant.rs  updater.rs
shared/: Cargo.toml
shared/migrations/: 001_init.sql
shared/src/: codec.rs  db.rs  lib.rs  scgi.rs  xmlrpc.rs
shared/src/server_fns/: auth.rs  mod.rs  push.rs  settings.rs  torrent.rs
