[workspace]
members = ["backend", "frontend", "shared"]
resolver = "2"

[profile.release]
# En küçük binary boyutu
opt-level = "z"
# En derin kod temizliği (dead code elimination)
lto = "fat"
# En iyi optimizasyon için tek birim derleme
codegen-units = 1
# Hata izleme kodlarını atarak yer kazan
panic = "abort"
# Sembolleri ve hata ayıklama bilgilerini kesin sil
strip = true
# Artık (incremental) build'i kapat ki optimizasyon tam olsun
incremental = false

[patch.crates-io]
coarsetime = { path = "third_party/coarsetime" }