[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
default = []
ssr = [
    "dep:tokio",
    "dep:bytes",
    "dep:thiserror",
    "dep:quick-xml",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:anyhow",
    "leptos/ssr",
    "leptos_router/ssr",
]
hydrate = ["leptos/hydrate"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
struct_patch = "0.5"
rmp-serde = "1.3"

# Leptos 0.8.7
leptos = { version = "0.8.7", features = ["nightly"] }
leptos_router = { version = "0.8.7", features = ["nightly"] }
leptos_axum = { version = "0.8.7", optional = true }

# SSR Dependencies (XML-RPC & SCGI)
tokio = { version = "1", features = ["full"], optional = true }
bytes = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
quick-xml = { version = "0.31", features = ["serde", "serialize"], optional = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"], optional = true }
anyhow = { version = "1.0", optional = true }

# Auth (SSR)
jsonwebtoken = { version = "9", optional = true }
cookie = { version = "0.18", features = ["percent-encode"], optional = true }
bcrypt = { version = "0.17", optional = true }

[features]
default = []
ssr = [
    "dep:tokio",
    "dep:bytes",
    "dep:thiserror",
    "dep:quick-xml",
    "dep:leptos_axum",
    "dep:sqlx",
    "dep:anyhow",
    "dep:jsonwebtoken",
    "dep:cookie",
    "dep:bcrypt",
    "leptos/ssr",
    "leptos_router/ssr",
]